--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ### IPythonNotebook template
 # Temporary data
 .ipynb_checkpoints/
+*.ipynb
 
 ### Python template
 # Byte-compiled / optimized / DLL files
