Base template processor should be ok

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -6,6 +6,7 @@ month_unit = 2
 year_unit = 3
 male = 0
 female = 1
+not_specified = 99
 medical_template = resources/report_template.xlsx
 qm_fr = resources/qt_fr.qm
 allow_pdv_delay_modification = 0
