Labels for drugs

--- a/resources/texts.ini
+++ b/resources/texts.ini
@@ -66,8 +66,7 @@ menu_help = Aide
 action_about = À propos...
 
 text_about = <h3>Fugen</h3>
-    <p>Fugen est un outil qui permet de générer des rapports mensuels de prise en charge du VIH à partir d'une base de données saisie dans le logiciel Fuchia. Cette version de Fugen a été adaptée au format du rapport en vigueur dans la République de Guinée.</p>
-credit_about = <i>Développé par Solthis, en partenariat avec le PNPCSP  et le CNLS</i>
-
+    <p>Fugen est un outil qui permet de générer des rapports mensuels de prise en charge du VIH à partir d'une base de données saisie dans le logiciel Fuchia. Cette version de Fugen a été adaptée au format de rapport en vigueur au Niger.</p>
+credit_about = <i>Développé par Solthis, en partenariat avec l'ULSS. Ce projet a été financé par Expertise France.</i>
 modify_advanced_title = Modifier les paramètres avancés
 modify_advanced_text = Attention, avant de modifier les paramètres avancés, assurez-vous de savoir ce que vous faites, un mauvais paramètrage conduira à un calcul des rapports incorrect.
