Update README and about

--- a/resources/texts.ini
+++ b/resources/texts.ini
@@ -66,7 +66,20 @@ menu_help = Aide
 action_about = À propos...
 
 text_about = <h3>Fugen</h3>
-    <p>Fugen est un outil qui permet de générer des rapports mensuels de prise en charge du VIH à partir d'une base de données saisie dans le logiciel Fuchia. Cette version de Fugen a été adaptée au format de rapport en vigueur au Niger.</p>
+        <p>Cet outil est un script développé pour générer de façon automatique, à
+        partir de la base de données du logiciel FUCHIA, le rapport mensuel des
+        indicateurs de suivi de cohorte des patients vivant avec le VIH suivis
+        dans les structures sanitaires au Niger. Son développement est mise en
+        œuvre par Solthis avec la collaboration de l’Unité de lutte sectoriel
+        contre le sida du Ministère de la santé publique du Niger et l’appui
+        financier de Initiative 5% France.</p>
+        <p>Le logiciel Fugen 2.0 est garanti par la licence GNU General Public
+        License version 3 et au-delà. Vous pouvez le modifier ou le redistribuer
+         sous les conditions de cette licence. Voir ce lien
+        <a href='https://www.gnu.org/licenses/gpl.html'>https://www.gnu.org/licenses/gpl.html</a> pour plus de détails.</p>
+        <p>Pour plus d’information sur ce projet vous pouvez visiter cette
+        page <a href='http://solthis.org/fr/projet/?pt=projet&ts=none&tp=niger&pg=1'>http://solthis.org/fr/projet/?pt=projet&ts=none&tp=niger&pg=1</a> ou
+        d’envoyer un mail à <a href='mailto: jacques.ndawinz@solthis.org'>jacques.ndawinz@solthis.org</a>.</p>
 credit_about = <i>Développé par Solthis, en partenariat avec l'ULSS. Ce projet a été financé par Expertise France.</i>
 modify_advanced_title = Modifier les paramètres avancés
 modify_advanced_text = Attention, avant de modifier les paramètres avancés, assurez-vous de savoir ce que vous faites, un mauvais paramètrage conduira à un calcul des rapports incorrect.
